Allow use on different device; simplify
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/branches/rel-2_0@325066 13f79535-47bb-0310-9956-ffa450edef68